# dumbphonehelp

./: .gitignore  Cargo.toml  README.md  diesel.toml
migrations/2024-12-16-162449_create_reminders_table/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs  vapi-payload.json
tests/: curls
