[package]
name = "dumbassistant"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version="1", features = ["v4", "serde"] }
reqwest = { version = "0.12.9", features = ["json"] }
axum = { version="0.7.9", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
hyper = "1.5.2"
diesel = { version = "2.2.6", features = ["sqlite"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["trace"] }
http-body-util = "0.1.2"

